# risc-core

./: .gitignore  CMakeLists.txt  Makefile  README.md
hw/: ByteWriteSpRfRam.sv  Core.sv  CoreTB.sv  DecodeStage.sv  Decoder.sv  DecoderTB.sv  ExecuteStage.sv  IFetchStage.sv  Instr.sv  IntALU.sv  L1DCache.sv  L1ICache.sv  Mem.sv  MemoryStage.sv  PlaygroundTB.sv  RegisterFile.sv  StoreQueue.sv  Top.sv  UOP.sv  Uop.sv  VivadoTop.sv  WriteBackStage.sv  bypass_if.sv  ifetch_redirect_if.sv  l1cache_mem_if.sv  l1dcache_core_if.sv  l1icache_core_if.sv  pipeline_if.sv  regfile_read_if.sv  regfile_write_if.sv
sim/: ClockedTestbench.h  DecoderTB.cpp  Instr.h  MemoryControllerSim.h  PlaygroundTB.cpp  main.cpp
